<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.postace.dice.MainActivity"
        android:orientation="vertical">

        <ImageButton
            android:onClick="onDiceClicked"
            android:id="@+id/dice_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/ui_dice_photo_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@drawable/white_die_1"/>

        <TextView
            style="@style/text_View_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_dice_color_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_View_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ui_dice_color_white"
                android:textColor="@android:color/darker_gray"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/dice_color_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"/>

            <TextView
                style="@style/text_View_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ui_dice_color_red"
                android:textColor="@android:color/holo_red_light"/>
        </LinearLayout>

        <TextView
            style="@style/text_View_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_result_title"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dice_one_title"/>

                <TextView
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dice_two_title"/>

                <TextView
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dice_three_title"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/dice_zero_value"
                    android:id="@+id/die_1"
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/dice_zero_value"
                    android:id="@+id/die_2"
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/dice_zero_value"
                    android:id="@+id/die_3"
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dice_four_title"/>

                <TextView
                    android:id="@+id/textView"
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dice_five_title"/>

                <TextView
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dice_six_title"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/dice_zero_value"
                    android:id="@+id/die_4"
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/dice_zero_value"
                    android:id="@+id/die_5"
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/dice_zero_value"
                    android:id="@+id/die_6"
                    style="@style/text_View_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>